# autoscrum

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt  setup.py
autoscrum/: __init__.py  __main__.py  autoscrum.py
autoscrum/data/: featurizer.hbs  requalizer.hbs  retrospector.hbs  storylizer.hbs
examples/: happy-farm.json  happy-farm2.json  jpeg-sort.json  paper.json  paper2.json  paper3.json  paper4.json  paper5.json
tests/: test-run.json  test_autoscrum.py
